# desksnapv4c

./: .env.example  .gitignore  App.tsx  CLAUDE.md  Makefile  Procfile.dev  README.md  alembic.ini  docker-compose.yml  index.css  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  ruff.toml  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts
components/: AgentActivityPanel.tsx  AnalyticsModal.tsx  AppContent.tsx  AppHeader.tsx  AppSidebar.tsx  ArchetypeCard.tsx  ArchetypeChangeDialog.tsx  ArchetypePicker.tsx  AutoResizeTextarea.tsx  ChatInterface.tsx  Dashboard.tsx  LayoutToolbar.tsx  MainStage.tsx  MiniSlidePreviews.tsx  ModeSwitcher.tsx  PresentationModeOverlay.tsx  PrintView.tsx  RelatedContentPanel.tsx  RemixDialog.tsx  SlideCard.tsx  SlideContentEditor.tsx  SlideList.tsx  SmartText.tsx  SpeakerNotesPanel.tsx  StandardLayouts.tsx  VersionHistoryPanel.tsx  WabiSabiArchetypes.tsx  WabiSabiComponents.tsx  WabiSabiStage.tsx  WorkspaceRenderer.tsx
config/: api.ts  archetypeDecorations.ts  archetypeRegistry.ts  colors.ts  contentItemStyles.ts  contentStyles.ts  defaults.ts  exportConstants.ts  featureFlags.ts  imageStyles.ts  index.ts  layoutConstants.ts  models.ts  onboarding.ts  patterns.ts  shortcuts.ts  zIndex.ts
contexts/: AgentActivityContext.tsx  AuthContext.tsx  ChatContext.tsx  ChatUIContext.tsx  DebugContext.tsx  DebugUIContext.tsx  DeckContext.tsx  NetworkContext.tsx  PresentationContext.tsx  QueryContext.tsx  SelectionContext.tsx  ServiceContext.tsx  TextSelectionContext.tsx  UIStateContext.tsx  WorkspaceModeContext.tsx  index.ts
coordinators/: ChatCoordinator.tsx  DeckViewCoordinator.tsx  PresentationModeCoordinator.tsx  index.ts
design-showcase/: DashboardDemo.tsx  DesignShowcase.tsx  ThemeNav.tsx  ThemeSwatch.tsx  index.ts  themes.ts
docs/: APPLICATION_FEATURES.md  REFACTORING_PLAN.md
homepage-prototypes/: PrototypeLayout.tsx  PrototypeSwitcher.tsx  index.tsx
hooks/: useAgentSteps.ts  useAnalytics.ts  useAppModality.ts  useAutoSave.ts  useChat.ts  useClickOutside.ts  useDeck.ts  useDocuments.ts  useDraftSetup.ts  useGenerationProgress.ts  useIdeation.ts  useImagePromptEditor.ts  useKeyboardNavigation.ts  useOnboarding.ts  useOnboardingHints.ts  usePresentationSubscription.ts  useRealtimeSync.ts  useSmartDefaults.ts  useTouchNavigation.ts
lib/: archetypeCategories.ts  archetypeContrast.ts  contrast.ts  copilotPrompts.ts  copilotTools.ts  fonts.ts  prompts.ts  textPresets.ts  themes.ts  utils.ts  wabiSabiText.ts
services/: aiClient.ts  contentRefinementService.ts  copilotAgent.ts  ensureApiKeySelection.ts  firecrawlService.ts  geminiService.ts  googleAuthService.ts  googleSlidesService.ts  grokService.ts  (+12 more)
(+534 files in other folders)
