[tool.poetry]
name = "decksnap-backend"
version = "0.1.0"
description = "DeckSnap AI-powered presentation generator backend"
authors = ["DeckSnap Team"]
readme = "README.md"
packages = [
    { include = "packages" },
    { include = "apps" }
]

[tool.poetry.dependencies]
python = "^3.11"
# FastAPI and server
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
# Database
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
# Async tasks
celery = "^5.4.0"
redis = "^5.2.0"
# Data validation
pydantic = {extras = ["email"], version = "^2.10.0"}
pydantic-settings = "^2.6.0"
# HTTP clients
httpx = "^0.28.0"
# Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.2.0"
python-multipart = "^0.0.18"
# Utilities
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"
# S3
boto3 = "^1.35.0"
# PPTX parsing
python-pptx = "^1.0.2"

[tool.poetry.group.dev.dependencies]
# Process management
honcho = "^1.1.0"
setuptools = "^75.0.0"  # Required by honcho for pkg_resources
# Testing
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
httpx = "^0.28.0"
# Linting and formatting
ruff = "^0.8.4"
# Type checking
mypy = "^1.13.0"
types-redis = "^4.6.0.20241004"
types-passlib = "^1.7.7.20240819"
# Development tools
ipython = "^8.31.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=packages --cov=apps --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["packages", "apps"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
